courses-og.html

--- a/courses-og.html
+++ b/courses-og.html
@@ -58,10 +58,10 @@
             <img class="navbarlogo" src="/images/testicon.png" alt="navbarlogo">
         </div>
         <div class="navinglinks slide-from-bottom">
-            <a class="navigation-links" href="/htmlfiles/home-og.html">Home</a>
-            <a class="navigation-links" href="/htmlfiles/courses-og.html">Courses</a>
-            <a class="navigation-links" href="/htmlfiles/contactus.html">Contact Us</a>
-            <a class="navigation-links" href="/htmlfiles/aboutus-og.html">About Us</a>
+            <a class="navigation-links" href="home-og.html">Home</a>
+            <a class="navigation-links" href="courses-og.html">Courses</a>
+            <a class="navigation-links" href="contactus.html">Contact Us</a>
+            <a class="navigation-links" href="aboutus-og.html">About Us</a>
         </div>
         <div class="hamburger fade-in" onclick="toggleMenu()">
             <div></div>
