--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- favicon tags -->
-    <link rel="icon" href="/images/favicoon.png" type="image/png">
+    <link rel="icon" href="images/favicoon.png" type="image/png">
     <link rel="apple-touch-icon" href="/images/favicoon.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/images/favicoon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="images/favicoon.png">
 
     <meta name="description" content="This is a website about to train others to improve in english speaking skills">
 
@@ -15,28 +15,28 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/cssfiles/footer.css" >
-    <link rel="stylesheet" href="/cssfiles/about.css" >
-    <link rel="stylesheet" href="/cssfiles/courses.css" >
-    <link rel="stylesheet" href="/cssfiles/special.css" >
-    <link rel="stylesheet" href="/cssfiles/faq.css" >
-    <link rel="stylesheet" href="/cssfiles/indexgen.css">
+    <link rel="stylesheet" href="cssfiles/footer.css" >
+    <link rel="stylesheet" href="cssfiles/about.css" >
+    <link rel="stylesheet" href="cssfiles/courses.css" >
+    <link rel="stylesheet" href="cssfiles/special.css" >
+    <link rel="stylesheet" href="cssfiles/faq.css" >
+    <link rel="stylesheet" href="cssfiles/indexgen.css">
 </head>
 <body>
     <div id="preloader">
         <div class="image-container">
-          <img src="/images/testicon(10).png" alt="Preloader Logo">
+          <img src="images/testicon(10).png" alt="Preloader Logo">
         </div>
         <div class="text-container">
           It's Time You Learnt English
         </div>
     </div>
-    <script src="/sc/preloder.js"></script>
+    <script src="sc/preloder.js"></script>
     <div id="main-content">
         <!-- Header Section -->
         <header id="headerbar">
             <div class="section1 slide-in-left">
-                <img class="logo" src="/images/testicon(10).png" alt="logo">
+                <img class="logo" src="images/testicon(10).png" alt="logo">
             </div>
             <div class="section2 slide-from-bottom"> 
                 <a class="headder-socialicon" href="https://www.instagram.com/englishbellofficial/">
@@ -73,7 +73,7 @@
         <!-- Navigation Bar -->
         <nav id="navbar">
             <div class="navbar-logo slide-from-bottom">
-                <img class="navbarlogo" src="/images/testicon.png" alt="navbarlogo">
+                <img class="navbarlogo" src="images/testicon.png" alt="navbarlogo">
             </div>
             <div class="navinglinks slide-from-bottom">
                 <a class="navigation-links" href="home-og.html">Home</a>
@@ -88,7 +88,7 @@
             </div>
         </nav>
 
-        <script src="/sc/hamburger.js"></script>
+        <script src="sc/hamburger.js"></script>
         <div class="aboutt">
             <div class="abouttone slide-in-left">
                 <P class="abpara"><span class="abparahd">Welcome To Englishbell</span><br><br>
@@ -98,7 +98,7 @@
                         Join English Bell today and set off on a journey to master the English language with confidence and ease
                    </span>
                 </P>
-                <script src="/sc/testscript.js"></script>
+                <script src="sc/testscript.js"></script>
             </div>
             <div>
                 <img class="aboutimg" src="#">
@@ -110,7 +110,7 @@
             </div>
             <div class="review-hdline-secondrow">
                 <div class="googlee">
-                    <img class="glogo" src="/images/googlelogoo.png">
+                    <img class="glogo" src="images/googlelogoo.png">
                 </div>
                 <div class="stars">
                     ★★★★★<span style="font-size: 18px; color: black; font-weight: 500;"> 4.9 rating </span><span style="font-size: 15px; font-weight: 500; color: #828080;">(190 reviews)</span>
@@ -126,14 +126,14 @@
                         <div class="review-box">
                             <div class="row row-1">
                                 <div class="profile-picture">
-                                    <img class="dpp" src="/images/review1dp.png">
+                                    <img class="dpp" src="images/review1dp.png">
                                 </div>
                                 <div class="reviewer-details">
                                     <div class="name" style="font-size: 12px; font-weight: 400;">Muhammed Usman AK</div>
                                     <div class="date" style="font-size: 10px; color: #9b9b9b;">14,Dec,2024</div>
                                 </div>
                                 <div class="google-icon">
-                                    <img class="google-icon" src="/images/googlelogoo.png">
+                                    <img class="google-icon" src="images/googlelogoo.png">
                                 </div>
                             </div>
                             <div class="row stars">★★★★★</div>
@@ -145,14 +145,14 @@
                         <div class="review-box">
                             <div class="row row-1">
                                 <div class="profile-picture">
-                                    <img class="dpp" src="/images/review2dp.png">
+                                    <img class="dpp" src="images/review2dp.png">
                                 </div>
                                 <div class="reviewer-details">
                                     <div class="name" style="font-size: 12px; font-weight: 400;"> Muhd Thensih</div>
                                     <div class="date" style="font-size: 10px; color: #9b9b9b;">20,Dec,2024</div>
                                 </div>
                                 <div class="google-icon">
-                                    <img class="google-icon" src="/images/googlelogoo.png">
+                                    <img class="google-icon" src="images/googlelogoo.png">
                                 </div>
                             </div>
                             <div class="row stars">★★★★★</div>
@@ -164,14 +164,14 @@
                         <div class="review-box">
                             <div class="row row-1">
                                 <div class="profile-picture">
-                                    <img class="dpp" src="/images/review3dp.png">
+                                    <img class="dpp" src="images/review3dp.png">
                                 </div>
                                 <div class="reviewer-details">
                                     <div class="name" style="font-size: 12px; font-weight: 400;">Sangeerth Shine</div>
                                     <div class="date" style="font-size: 10px; color: #9b9b9b;">06,Dec,2024</div>
                                 </div>
                                 <div class="google-icon">
-                                    <img class="google-icon" src="/images/googlelogoo.png">
+                                    <img class="google-icon" src="images/googlelogoo.png">
                                 </div>
                             </div>
                             <div class="row stars">★☆☆☆☆</div>
@@ -183,14 +183,14 @@
                         <div class="review-box">
                             <div class="row row-1">
                                 <div class="profile-picture">
-                                    <img class="dpp" src="/images/review4dp.png">
+                                    <img class="dpp" src="images/review4dp.png">
                                 </div>
                                 <div class="reviewer-details">
                                     <div class="name" style="font-size: 12px; font-weight: 400;">Shabna Firoz</div>
                                     <div class="date" style="font-size: 10px; color: #9b9b9b;">24,Dec,2024</div>
                                 </div>
                                 <div class="google-icon">
-                                    <img class="google-icon" src="/images/googlelogoo.png">
+                                    <img class="google-icon" src="images/googlelogoo.png">
                                 </div>
                             </div>
                             <div class="row stars">★★★★★</div>
@@ -202,14 +202,14 @@
                         <div class="review-box">
                             <div class="row row-1">
                                 <div class="profile-picture">
-                                    <img class="dpp" src="/images/review5dp.png">
+                                    <img class="dpp" src="images/review5dp.png">
                                 </div>
                                 <div class="reviewer-details">
                                     <div class="name" style="font-size: 12px; font-weight: 400;">Shamna V</div>
                                     <div class="date" style="font-size: 10px; color: #9b9b9b;">18,Dec,2024</div>
                                 </div>
                                 <div class="google-icon">
-                                    <img class="google-icon" src="/images/googlelogoo.png">
+                                    <img class="google-icon" src="images/googlelogoo.png">
                                 </div>
                             </div>
                             <div class="row stars">★★★★★</div>
@@ -221,14 +221,14 @@
                         <div class="review-box">
                             <div class="row row-1">
                                 <div class="profile-picture">
-                                    <img class="dpp" src="/images/review6dp.png">
+                                    <img class="dpp" src="images/review6dp.png">
                                 </div>
                                 <div class="reviewer-details">
                                     <div class="name" style="font-size: 12px; font-weight: 400;">Janvi V S</div>
                                     <div class="date" style="font-size: 10px; color: #9b9b9b;">13,Sep,2024</div>
                                 </div>
                                 <div class="google-icon">
-                                    <img class="google-icon" src="/images/googlelogoo.png">
+                                    <img class="google-icon" src="images/googlelogoo.png">
                                 </div>
                             </div>
                             <div class="row stars">★★★★★</div>
@@ -240,14 +240,14 @@
                         <div class="review-box">
                             <div class="row row-1">
                                 <div class="profile-picture">
-                                    <img class="dpp" src="/images/review7dp.png">
+                                    <img class="dpp" src="images/review7dp.png">
                                 </div>
                                 <div class="reviewer-details">
                                     <div class="name" style="font-size: 12px; font-weight: 400;">Liya Faz</div>
                                     <div class="date" style="font-size: 10px; color: #9b9b9b;">27,Dec,2024</div>
                                 </div>
                                 <div class="google-icon">
-                                    <img class="google-icon" src="/images/googlelogoo.png">
+                                    <img class="google-icon" src="images/googlelogoo.png">
                                 </div>
                             </div>
                             <div class="row stars">★★★★★</div>
@@ -259,14 +259,14 @@
                         <div class="review-box">
                             <div class="row row-1">
                                 <div class="profile-picture">
-                                    <img class="dpp" src="/images/review8dp.png">
+                                    <img class="dpp" src="images/review8dp.png">
                                 </div>
                                 <div class="reviewer-details">
                                     <div class="name" style="font-size: 12px; font-weight: 400;">favask pgm</div>
                                     <div class="date" style="font-size: 10px; color: #9b9b9b;">10,Sep,2024</div>
                                 </div>
                                 <div class="google-icon">
-                                    <img class="google-icon" src="/images/googlelogoo.png">
+                                    <img class="google-icon" src="images/googlelogoo.png">
                                 </div>
                             </div>
                             <div class="row stars">★★★★★</div>
@@ -278,14 +278,14 @@
                         <div class="review-box">
                             <div class="row row-1">
                                 <div class="profile-picture">
-                                    <img class="dpp" src="/images/review9dp.png">
+                                    <img class="dpp" src="images/review9dp.png">
                                 </div>
                                 <div class="reviewer-details">
                                     <div class="name" style="font-size: 12px; font-weight: 400;">Shabna Firoz</div>
                                     <div class="date" style="font-size: 10px; color: #9b9b9b;">23,Sep,2024</div>
                                 </div>
                                 <div class="google-icon">
-                                    <img class="google-icon" src="/images/googlelogoo.png">
+                                    <img class="google-icon" src="images/googlelogoo.png">
                                 </div>
                             </div>
                             <div class="row stars">★★★★☆</div>
@@ -294,7 +294,7 @@
                     </div>
                 </div>
             </div>
-        <script src="/sc/googlereview.js"></script>
+        <script src="sc/googlereview.js"></script>
             
         </div>
         <div class="hdlne">
@@ -377,7 +377,7 @@
             <div class="card-oddone slide-in-right">
                 <div class="card-row top-row">
                     <div class="icon">
-                        <img class="speciality-icon" src="/images/firsticon-removebg-preview.png">
+                        <img class="speciality-icon" src="images/firsticon-removebg-preview.png">
                     </div>
                     <div class="heading">Theme-Based Interaction Module</div>
                 </div>
@@ -390,7 +390,7 @@
             <div class="card-evenone slide-in-left">
                 <div class="card-row top-row">
                     <div class="icon">
-                        <img class="speciality-icon" src="/images/secondicon-removebg-preview.png">
+                        <img class="speciality-icon" src="images/secondicon-removebg-preview.png">
                     </div>
                     <div class="heading">Personal Attention</div>
                 </div>
@@ -403,7 +403,7 @@
             <div class="card-oddone slide-in-right">
                 <div class="card-row top-row">
                     <div class="icon">
-                        <img class="speciality-icon" src="/images/thirdicon-removebg-preview.png">
+                        <img class="speciality-icon" src="images/thirdicon-removebg-preview.png">
                     </div>
                     <div class="heading">Learn Anywhere </div>
                 </div>
@@ -416,7 +416,7 @@
             <div class="card-evenone slide-in-left">
                 <div class="card-row top-row">
                     <div class="icon">
-                        <img class="speciality-icon" src="/images/fourthicon-removebg-preview.png">
+                        <img class="speciality-icon" src="images/fourthicon-removebg-preview.png">
                     </div>
                     <div class="heading">Flexible Learning Opportunities</div>
                 </div>
@@ -429,7 +429,7 @@
             <div class="card-oddone slide-in-right">
                 <div class="card-row top-row">
                     <div class="icon">
-                        <img class="speciality-icon" src="/images/fivethone-removebg-preview.png">
+                        <img class="speciality-icon" src="images/fivethone-removebg-preview.png">
                     </div>
                     <div class="heading">Flexible Learning Opportunities</div>
                 </div>
@@ -442,7 +442,7 @@
             <div class="card-evenone slide-in-left">
                 <div class="card-row top-row">
                     <div class="icon">
-                        <img class="speciality-icon" src="/images/fivethone-removebg-preview.png">
+                        <img class="speciality-icon" src="images/fivethone-removebg-preview.png">
                     </div>
                     <div class="heading">Theme-Based Interaction Module</div>
                 </div>
@@ -483,7 +483,7 @@
                     <p class="faq-answer">The duration of each course varies, but most courses can be completed in 4 to 6 weeks depending on the level of intensity you choose.</p>
                 </div>
             </section>
-            <script src="/sc/faq.js"></script>
+            <script src="sc/faq.js"></script>
         </div>
         <div class="fixed-buttons fade-in">
             <a href="https://wa.me/9605880066" target="_blank" class="whatsapp-button">
@@ -495,7 +495,7 @@
         </div>
         <div class="prefooterr">
             <div class="left-pre slide-from-bottom">
-                <img class="prefooterimg" src="/images/icon.png">
+                <img class="prefooterimg" src="images/icon.png">
                 <div class="left-pre-second">
                     <div class="left-pre-seocnd-one">
                         <a class="socialicon" href="https://www.google.com/maps/place/English+Bell/@11.1775906,75.8618494,685m/data=!3m2!1e3!4b1!4m6!3m5!1s0x3ba651e1b22468df:0x66153a43442e6331!8m2!3d11.1775853!4d75.8644243!16s%2Fg%2F11rl_dv4lk?entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D" target="_blank">
@@ -566,7 +566,7 @@
                 </P>
             </div>
         </footer>
-        <script src="/sc/testscript.js"></script>
+        <script src="sc/testscript.js"></script>
     </div>
 </body>
 </html>
