--- a/courses-og.html
+++ b/courses-og.html
@@ -4,21 +4,21 @@
     <title>English Bell</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/images/favicoon.png" type="image/png" sizes="10x10">
+    <link rel="icon" href="images/favicoon.png" type="image/png" sizes="10x10">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/cssfiles/footer.css" >
-    <link rel="stylesheet" href="/cssfiles/courses.css" >
-    <link rel="stylesheet" href="/cssfiles/special.css" >
-    <link rel="stylesheet" href="/cssfiles/about.css" >
-    <link rel="stylesheet" href="/cssfiles/contactusgen.css">
+    <link rel="stylesheet" href="cssfiles/footer.css" >
+    <link rel="stylesheet" href="cssfiles/courses.css" >
+    <link rel="stylesheet" href="cssfiles/special.css" >
+    <link rel="stylesheet" href="cssfiles/about.css" >
+    <link rel="stylesheet" href="cssfiles/contactusgen.css">
 </head>
 <body>
     <!-- Header Section -->
     <header id="headerbar">
         <div class="section1 slide-in-left">
-            <img class="logo" src="/images/testicon(10).png" alt="logo">
+            <img class="logo" src="images/testicon(10).png" alt="logo">
         </div>
         <div class="section2 slide-from-bottom"> 
             <a class="headder-socialicon" href="https://www.instagram.com/englishbellofficial/">
@@ -55,7 +55,7 @@
     <!-- Navigation Bar -->
     <nav id="navbar">
         <div class="navbar-logo fade-in">
-            <img class="navbarlogo" src="/images/testicon.png" alt="navbarlogo">
+            <img class="navbarlogo" src="images/testicon.png" alt="navbarlogo">
         </div>
         <div class="navinglinks slide-from-bottom">
             <a class="navigation-links" href="home-og.html">Home</a>
@@ -70,7 +70,7 @@
         </div>
     </nav>
 
-    <script src="/sc/hamburger.js"></script>
+    <script src="sc/hamburger.js"></script>
     <div class="hdlne">
         <div class="prehdline slide-in-left">
             It's Time You Learnt English 
@@ -134,7 +134,7 @@
         <div class="card-oddone slide-in-right">
             <div class="card-row top-row">
                 <div class="icon">
-                    <img class="speciality-icon" src="/images/firsticon-removebg-preview.png">
+                    <img class="speciality-icon" src="images/firsticon-removebg-preview.png">
                 </div>
                 <div class="heading">Theme-Based Interaction Module</div>
             </div>
@@ -147,7 +147,7 @@
         <div class="card-evenone slide-in-left">
             <div class="card-row top-row">
                 <div class="icon">
-                    <img class="speciality-icon" src="/images/secondicon-removebg-preview.png">
+                    <img class="speciality-icon" src="images/secondicon-removebg-preview.png">
                 </div>
                 <div class="heading">Personal Attention</div>
             </div>
@@ -160,7 +160,7 @@
         <div class="card-oddone slide-in-right">
             <div class="card-row top-row">
                 <div class="icon">
-                    <img class="speciality-icon" src="/images/thirdicon-removebg-preview.png">
+                    <img class="speciality-icon" src="images/thirdicon-removebg-preview.png">
                 </div>
                 <div class="heading">Learn Anywhere </div>
             </div>
@@ -173,7 +173,7 @@
         <div class="card-evenone slide-in-left">
             <div class="card-row top-row">
                 <div class="icon">
-                    <img class="speciality-icon" src="/images/fourthicon-removebg-preview.png">
+                    <img class="speciality-icon" src="images/fourthicon-removebg-preview.png">
                 </div>
                 <div class="heading">Flexible Learning Opportunities</div>
             </div>
@@ -186,7 +186,7 @@
         <div class="card-oddone slide-in-right">
             <div class="card-row top-row">
                 <div class="icon">
-                    <img class="speciality-icon" src="/images/fivethone-removebg-preview.png">
+                    <img class="speciality-icon" src="images/fivethone-removebg-preview.png">
                 </div>
                 <div class="heading">Flexible Learning Opportunities</div>
             </div>
@@ -199,7 +199,7 @@
         <div class="card-evenone slide-in-left">
             <div class="card-row top-row">
                 <div class="icon">
-                    <img class="speciality-icon" src="/images/fivethone-removebg-preview.png">
+                    <img class="speciality-icon" src="images/fivethone-removebg-preview.png">
                 </div>
                 <div class="heading">Theme-Based Interaction Module</div>
             </div>
@@ -214,7 +214,7 @@
         </div>
         <div class="review-hdline-secondrow">
           <div class="googlee">
-            <img class="glogo" src="/images/googlelogoo.png">
+            <img class="glogo" src="images/googlelogoo.png">
           </div>
           <div class="stars">
             ★★★★★<span style="font-size: 18px; color: black; font-weight: 500;"> 4.9 rating </span><span style="font-size: 15px; font-weight: 500; color: #828080;">(190 reviews)</span>
@@ -230,14 +230,14 @@
                     <div class="review-box">
                         <div class="row row-1">
                             <div class="profile-picture">
-                                <img class="dpp" src="/images/review1dp.png">
+                                <img class="dpp" src="images/review1dp.png">
                             </div>
                             <div class="reviewer-details">
                                 <div class="name" style="font-size: 12px; font-weight: 400;">Muhammed Usman AK</div>
                                 <div class="date" style="font-size: 10px; color: #9b9b9b;">14,Dec,2024</div>
                             </div>
                             <div class="google-icon">
-                                <img class="google-icon" src="/images/googlelogoo.png">
+                                <img class="google-icon" src="images/googlelogoo.png">
                             </div>
                         </div>
                         <div class="row stars">★★★★★</div>
@@ -249,14 +249,14 @@
                     <div class="review-box">
                         <div class="row row-1">
                             <div class="profile-picture">
-                                <img class="dpp" src="/images/review2dp.png">
+                                <img class="dpp" src="images/review2dp.png">
                             </div>
                             <div class="reviewer-details">
                                 <div class="name" style="font-size: 12px; font-weight: 400;"> Muhd Thensih</div>
                                 <div class="date" style="font-size: 10px; color: #9b9b9b;">20,Dec,2024</div>
                             </div>
                             <div class="google-icon">
-                                <img class="google-icon" src="/images/googlelogoo.png">
+                                <img class="google-icon" src="images/googlelogoo.png">
                             </div>
                         </div>
                         <div class="row stars">★★★★★</div>
@@ -268,14 +268,14 @@
                     <div class="review-box">
                         <div class="row row-1">
                             <div class="profile-picture">
-                                <img class="dpp" src="/images/review3dp.png">
+                                <img class="dpp" src="images/review3dp.png">
                             </div>
                             <div class="reviewer-details">
                                 <div class="name" style="font-size: 12px; font-weight: 400;">Sangeerth Shine</div>
                                 <div class="date" style="font-size: 10px; color: #9b9b9b;">06,Dec,2024</div>
                             </div>
                             <div class="google-icon">
-                                <img class="google-icon" src="/images/googlelogoo.png">
+                                <img class="google-icon" src="images/googlelogoo.png">
                             </div>
                         </div>
                         <div class="row stars">★☆☆☆☆</div>
@@ -287,14 +287,14 @@
                     <div class="review-box">
                         <div class="row row-1">
                             <div class="profile-picture">
-                                <img class="dpp" src="/images/review4dp.png">
+                                <img class="dpp" src="images/review4dp.png">
                             </div>
                             <div class="reviewer-details">
                                 <div class="name" style="font-size: 12px; font-weight: 400;">Shabna Firoz</div>
                                 <div class="date" style="font-size: 10px; color: #9b9b9b;">24,Dec,2024</div>
                             </div>
                             <div class="google-icon">
-                                <img class="google-icon" src="/images/googlelogoo.png">
+                                <img class="google-icon" src="images/googlelogoo.png">
                             </div>
                         </div>
                         <div class="row stars">★★★★★</div>
@@ -306,14 +306,14 @@
                     <div class="review-box">
                         <div class="row row-1">
                             <div class="profile-picture">
-                                <img class="dpp" src="/images/review5dp.png">
+                                <img class="dpp" src="images/review5dp.png">
                             </div>
                             <div class="reviewer-details">
                                 <div class="name" style="font-size: 12px; font-weight: 400;">Shamna V</div>
                                 <div class="date" style="font-size: 10px; color: #9b9b9b;">18,Dec,2024</div>
                             </div>
                             <div class="google-icon">
-                                <img class="google-icon" src="/images/googlelogoo.png">
+                                <img class="google-icon" src="images/googlelogoo.png">
                             </div>
                         </div>
                         <div class="row stars">★★★★★</div>
@@ -325,14 +325,14 @@
                     <div class="review-box">
                         <div class="row row-1">
                             <div class="profile-picture">
-                                <img class="dpp" src="/images/review6dp.png">
+                                <img class="dpp" src="images/review6dp.png">
                             </div>
                             <div class="reviewer-details">
                                 <div class="name" style="font-size: 12px; font-weight: 400;">Janvi V S</div>
                                 <div class="date" style="font-size: 10px; color: #9b9b9b;">13,Sep,2024</div>
                             </div>
                             <div class="google-icon">
-                                <img class="google-icon" src="/images/googlelogoo.png">
+                                <img class="google-icon" src="images/googlelogoo.png">
                             </div>
                         </div>
                         <div class="row stars">★★★★★</div>
@@ -344,14 +344,14 @@
                     <div class="review-box">
                         <div class="row row-1">
                             <div class="profile-picture">
-                                <img class="dpp" src="/images/review7dp.png">
+                                <img class="dpp" src="images/review7dp.png">
                             </div>
                             <div class="reviewer-details">
                                 <div class="name" style="font-size: 12px; font-weight: 400;">Liya Faz</div>
                                 <div class="date" style="font-size: 10px; color: #9b9b9b;">27,Dec,2024</div>
                             </div>
                             <div class="google-icon">
-                                <img class="google-icon" src="/images/googlelogoo.png">
+                                <img class="google-icon" src="images/googlelogoo.png">
                             </div>
                         </div>
                         <div class="row stars">★★★★★</div>
@@ -363,14 +363,14 @@
                     <div class="review-box">
                         <div class="row row-1">
                             <div class="profile-picture">
-                                <img class="dpp" src="/images/review8dp.png">
+                                <img class="dpp" src="images/review8dp.png">
                             </div>
                             <div class="reviewer-details">
                                 <div class="name" style="font-size: 12px; font-weight: 400;">favask pgm</div>
                                 <div class="date" style="font-size: 10px; color: #9b9b9b;">10,Sep,2024</div>
                             </div>
                             <div class="google-icon">
-                                <img class="google-icon" src="/images/googlelogoo.png">
+                                <img class="google-icon" src="images/googlelogoo.png">
                             </div>
                         </div>
                         <div class="row stars">★★★★★</div>
@@ -382,14 +382,14 @@
                     <div class="review-box">
                         <div class="row row-1">
                             <div class="profile-picture">
-                                <img class="dpp" src="/images/review9dp.png">
+                                <img class="dpp" src="images/review9dp.png">
                             </div>
                             <div class="reviewer-details">
                                 <div class="name" style="font-size: 12px; font-weight: 400;">Shabna Firoz</div>
                                 <div class="date" style="font-size: 10px; color: #9b9b9b;">23,Sep,2024</div>
                             </div>
                             <div class="google-icon">
-                                <img class="google-icon" src="/images/googlelogoo.png">
+                                <img class="google-icon" src="images/googlelogoo.png">
                             </div>
                         </div>
                         <div class="row stars">★★★★☆</div>
@@ -398,7 +398,7 @@
                 </div>
             </div>
         </div>
-       <script src="/sc/googlereview.js"></script>
+       <script src="sc/googlereview.js"></script>
     </div>
     <div class="emcp">
         <div>
@@ -427,7 +427,7 @@
     </div>
     <div class="prefooterr">
         <div class="left-pre">
-            <img class="prefooterimg slide-from-bottom" src="/images/icon.png">
+            <img class="prefooterimg slide-from-bottom" src="images/icon.png">
             <div class="left-pre-second slide-from-bottom">
                 <div class="left-pre-seocnd-one">
                     <a class="socialicon" href="https://www.google.com/maps/place/English+Bell/@11.1775906,75.8618494,685m/data=!3m2!1e3!4b1!4m6!3m5!1s0x3ba651e1b22468df:0x66153a43442e6331!8m2!3d11.1775853!4d75.8644243!16s%2Fg%2F11rl_dv4lk?entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D" target="_blank">
@@ -498,6 +498,6 @@
             </P>
         </div>
     </footer>
-    <script src="/sc/testscript.js"></script>
+    <script src="sc/testscript.js"></script>
 </body>
 </html>
