--- a/contactus.html
+++ b/contactus.html
@@ -3,19 +3,19 @@
 <head>
     <title>English Bell</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/images/favicoon.png" type="image/png" sizes="10x10">
+    <link rel="icon" href="images/favicoon.png" type="image/png" sizes="10x10">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/cssfiles/footer.css" >
-    <link rel="stylesheet" href="/cssfiles/contact.css" >
-    <link rel="stylesheet" href="/cssfiles/contactusgen.css">
+    <link rel="stylesheet" href="cssfiles/footer.css" >
+    <link rel="stylesheet" href="cssfiles/contact.css" >
+    <link rel="stylesheet" href="cssfiles/contactusgen.css">
 </head>
 <body>
     <!-- Header Section -->
     <header id="headerbar">
         <div class="section1 slide-from-bottom">
-            <img class="logo" src="/images/testicon(10).png" alt="logo">
+            <img class="logo" src="images/testicon(10).png" alt="logo">
         </div>
         <div class="section2 slide-from-bottom"> 
             <a class="headder-socialicon" href="https://www.instagram.com/englishbellofficial/">
@@ -52,7 +52,7 @@
     <!-- Navigation Bar -->
     <nav id="navbar">
         <div class="navbar-logo slide-in-left">
-            <img class="navbarlogo" src="/images/testicon.png" alt="navbarlogo">
+            <img class="navbarlogo" src="images/testicon.png" alt="navbarlogo">
         </div>
         <div class="navinglinks slide-from-bottom">
             <a class="navigation-links" href="home-og.html">Home</a>
@@ -67,7 +67,7 @@
         </div>
     </nav>
 
-    <script src="/sc/hamburger.js"></script>
+    <script src="sc/hamburger.js"></script>
     <div class="contatsusdiv">
         <div class="rightsession">
             <h4 class="slide-from-bottom">Want to know more?<br>Message us here.</h4>
@@ -86,7 +86,7 @@
 
                 <button class="submit-button slide-from-bottom" type="submit">Submit</button> 
             </form>
-            <script src="/sc/contactus.js"></script>
+            <script src="sc/contactus.js"></script>
                 
         </div>
         <div class="lftsession">
@@ -123,7 +123,7 @@
     </div>
     <div class="prefooterr">
         <div class="left-pre slide-from-bottom">
-            <img class="prefooterimg" src="/images/icon.png">
+            <img class="prefooterimg" src="images/icon.png">
             <div class="left-pre-second">
                 <div class="left-pre-seocnd-one">
                     <a class="socialicon" href="https://www.google.com/maps/place/English+Bell/@11.1775906,75.8618494,685m/data=!3m2!1e3!4b1!4m6!3m5!1s0x3ba651e1b22468df:0x66153a43442e6331!8m2!3d11.1775853!4d75.8644243!16s%2Fg%2F11rl_dv4lk?entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D" target="_blank">
@@ -195,6 +195,6 @@
         </div>
     </footer>
     
-    <script src="/sc/testscript.js"></script>
+    <script src="sc/testscript.js"></script>
 </body>
 </html>
