aboutus-og.html

--- a/aboutus-og.html
+++ b/aboutus-og.html
@@ -3,19 +3,19 @@
 <head>
     <title>English Bell</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/images/favicoon.png" type="image/png" sizes="10x10">
+    <link rel="icon" href="images/favicoon.png" type="image/png" sizes="10x10">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/cssfiles/footer.css" >
-    <link rel="stylesheet" href="/cssfiles/prefooter.css" >
-   <link rel="stylesheet" href="/cssfiles/aboutgen.css">
+    <link rel="stylesheet" href="cssfiles/footer.css" >
+    <link rel="stylesheet" href="cssfiles/prefooter.css" >
+   <link rel="stylesheet" href="cssfiles/aboutgen.css">
 </head>
 <body>
     <!-- Header Section -->
     <header id="headerbar">
         <div class="section1">
-            <img class="logo" src="/images/testicon.png" alt="logo">
+            <img class="logo" src="images/testicon.png" alt="logo">
         </div>
         <div class="section2"> 
             <a class="headder-socialicon" href="https://www.instagram.com/englishbellofficial/">
@@ -52,7 +52,7 @@
     <!-- Navigation Bar -->
     <nav id="navbar">
         <div class="navbar-logo">
-            <img class="navbarlogo" src="/images/testicon.png" alt="navbarlogo">
+            <img class="navbarlogo" src="images/testicon.png" alt="navbarlogo">
         </div>
         <div class="navinglinks">
             <a class="navigation-links" href="home-og.html">Home</a>
@@ -85,7 +85,7 @@
     </div>
     <div class="prefooterr">
         <div class="left-pre">
-            <img class="prefooterimg" src="/images/icon.png">
+            <img class="prefooterimg" src="images/icon.png">
             <div class="left-pre-second">
                 <div class="left-pre-seocnd-one">
                     <a class="socialicon" href="https://www.google.com/maps/place/English+Bell/@11.1775906,75.8618494,685m/data=!3m2!1e3!4b1!4m6!3m5!1s0x3ba651e1b22468df:0x66153a43442e6331!8m2!3d11.1775853!4d75.8644243!16s%2Fg%2F11rl_dv4lk?entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D" target="_blank">
